# ResearchNest

./: .env.example  .gitignore  .replit  INSTALL_LOCAL.md  README.md  STANDALONE_SETUP.md  app.py  assign_units_topics.py  assign_units_topics_direct.py  auth.py  config.py  cookies.txt  create_test_pdf.py  fix_generated_papers.py  forms.py  generate_ds_questions.py  generate_rdbms_questions.py  generate_sql_questions.py  generate_stacks_queues_questions.py  generate_trees_graphs_questions.py  local_app.py  local_main.py  local_replit_auth.py  local_requirements.txt  local_routes.py  main.py  models.py  pdf_question_extractor.py  pyproject.toml  question_processor.py  replit_auth.py  requirements.txt  reset_admin_password.py  routes.py  run_local.py  test_generate_paper.py  utils.py
attached_assets/: Pasted-1-Student-Upload-Portal-1-1-User-Flow-Login-Signup-Students-authenticate-via-stan-1749250147151.txt  Pasted-Module-1-Student-Upload-Portal-A-User-Stories-As-a-new-student-I-want-to-register-an-account-1749250179822.txt
docs/: README.md
docs/setup/: configuration.md  installation.md
docs/usage/: quickstart.md
instance/: research_nest.db
migrations/versions/: 2155839e3385_add_extraction_tracking_fields_to_.py
static/css/: question_upload.css  style.css
static/js/: search.js  (+3 more)
templates/: 403.html  add_question.html  admin_dashboard.html  admin_papers.html  admin_users.html  base.html  change_password.html  edit_question.html  index.html  login.html  manage_questions.html  my_papers.html  paper_detail.html  profile.html  search.html  signup.html  upload.html
(+9 files in other folders)
